media query add ki

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@ main{
     align-items: center;
     gap: 4vh;
 }
-
 main #part-1{
     text-align: center;
     margin-top: 5vmax;
@@ -58,8 +57,8 @@ main #part-2{
 #part-2 .imgS{
     cursor: pointer;
     border: 1px solid white;
-     width: 20.5vmin;
-    height: 20.5vmin;
+     width: 20vmin;
+    height: 20vmin;
     text-align: center;
     border-radius: 5px;
 }
@@ -106,12 +105,14 @@ main #part-2{
     margin-top: 10px;
      color: black;
      width: 30vw;
+     height: 2vh;
      text-align: center;
      background-color: white;
      border-radius: 4px;
    font-size: 3vh;
    font-weight: 500;
    text-transform: capitalize;
+   opacity: 0;
 }
 #result{
      margin-top: 10px;
@@ -219,6 +220,60 @@ main #part-2{
       object-fit: cover;
       cursor: pointer;
       z-index: 1;
+    }
+
+    @media screen and (max-width: 768px){
+      main #part-2{  
+    margin: auto;
+    width: 60vmin;
+    height: 100vmin;
+    gap: 6vh;
+}
+main #part-1 #name{
+    font-size: 1.5em;
+}
+#score{
+    top: 10vh;
+    left: 60%;
+} 
+#win{
+     width: 25vmin;
+   font-size: 2.4vh;
+}
+#lost{
+     width: 25vmin;
+   font-size: 2.4vh;
+}
+#tie{
+    width: 25vmin;
+   font-size: 2.4vh; 
+}
+#com{
+     width: 40vmin;
+     height: 35px;
+   font-size: 1.9vh;
+   font-weight: 700;
+}
+#result{
+     margin-bottom: 22vmin;
+     width: 40vmin;
+   font-size: 1.9vh;
+   font-weight: 700;
+}
+ #block h4 {
+        width: 50vw;
+        padding: 2px;
+        font-size: 3vh;
+        }
+  #Com-win{
+        width: 60%;
+        height: 35px;
+        font-size: 0.80rem;
+        font-weight: 500;
+        } 
+  #reset{
+      left: 40%;
+    } 
     }
     </style>
 </head>
@@ -395,6 +450,7 @@ document.addEventListener("DOMContentLoaded",(e)=>{
     else{
       computer = 'stump';
     }
+    com.style.opacity = 1;
     com.innerHTML =(`computer choice is ${computer}`);
   };
 
